--- a/app/src/main/res/layout/fragment_recycle.xml
+++ b/app/src/main/res/layout/fragment_recycle.xml
@@ -6,7 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorBackground"
-        tools:context="com.cloud.design.activity.ListActivity">
+        tools:context="com.cloud.design.fragment.RecycleFragment">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycle_view"
