Add a warning dialog and fix some NullPointException.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#33ccff</color>
     <color name="colorPrimaryDark">#33ccff</color>
     <color name="colorAccent">#D81B60</color>
-    <color name="colorRed">#ff6666</color>
+    <color name="colorRed">#ff1a1a</color>
     <color name="colorGreen">#80cc33</color>
     <color name="colorBlue">#33ccff</color>
     <color name="colorBackground">#f0f0f0</color>
