--- a/app/src/main/res/drawable/bg_positive_button.xml
+++ b/app/src/main/res/drawable/bg_positive_button.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-
     <item>
         <shape>
-            <corners android:radius="10dp" />
-            <solid android:color="#ffffff" />
+            <solid android:color="@color/colorRed" />
+            <corners android:bottomRightRadius="12dp" />
         </shape>
     </item>
-
 </selector>
