--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,13 +11,25 @@
         tools:context=".activity.MainActivity">
 
         <Button
-            android:id="@+id/button_show_dialog"
+            android:id="@+id/button_info_dialog"
             style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="240dp"
             android:layout_height="wrap_content"
             android:paddingStart="16dp"
             android:paddingEnd="16dp"
             android:text="@string/show_dialog_info"
+            android:textAllCaps="false"
+            android:background="@drawable/bg_dialog_button" />
+
+        <Button
+            android:id="@+id/button_warning_dialog"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="240dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"
+            android:text="@string/show_dialog_warning"
             android:textAllCaps="false"
             android:background="@drawable/bg_dialog_button" />
 
