--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <LinearLayout
@@ -12,38 +11,20 @@
 
         <Button
             android:id="@+id/button_info_dialog"
-            style="@style/Widget.AppCompat.Button.Colored"
-            android:layout_width="240dp"
-            android:layout_height="wrap_content"
-            android:paddingStart="16dp"
-            android:paddingEnd="16dp"
-            android:text="@string/show_dialog_info"
-            android:textAllCaps="false"
-            android:background="@drawable/bg_dialog_button" />
+            style="@style/Button"
+            android:text="@string/show_dialog_info" />
 
         <Button
             android:id="@+id/button_warning_dialog"
-            style="@style/Widget.AppCompat.Button.Colored"
-            android:layout_width="240dp"
-            android:layout_height="wrap_content"
+            style="@style/Button"
             android:layout_marginTop="8dp"
-            android:paddingStart="16dp"
-            android:paddingEnd="16dp"
-            android:text="@string/show_dialog_warning"
-            android:textAllCaps="false"
-            android:background="@drawable/bg_dialog_button" />
+            android:text="@string/show_dialog_warning" />
 
         <Button
             android:id="@+id/button_show_recycle_view"
-            style="@style/Widget.AppCompat.Button.Colored"
-            android:layout_width="240dp"
-            android:layout_height="wrap_content"
+            style="@style/Button"
             android:layout_marginTop="8dp"
-            android:paddingStart="16dp"
-            android:paddingEnd="16dp"
-            android:text="@string/list_activity"
-            android:textAllCaps="false"
-            android:background="@drawable/bg_dialog_button" />
+            android:text="@string/recycle_activity" />
 
     </LinearLayout>
 
