--- a/customviews/src/main/res/layout/dialog_info.xml
+++ b/customviews/src/main/res/layout/dialog_info.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="#ffffff">
@@ -14,10 +15,7 @@
         android:layout_height="wrap_content"
         android:padding="16dp"
         android:gravity="center"
-        android:background="@color/colorGreen"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        android:background="@color/colorGreen">
 
         <!-- Icon -->
         <ImageView
@@ -42,14 +40,10 @@
 
     <LinearLayout
         android:orientation="vertical"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="16dp"
-        android:gravity="center"
-        app:layout_constraintTop_toBottomOf="@+id/dialog_header"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
+        android:gravity="center">
 
         <!-- Dialog Message -->
         <TextView
@@ -73,4 +67,4 @@
 
     </LinearLayout>
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
