--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="colorRed">#ff1a1a</color>
     <color name="colorGreen">#80cc33</color>
     <color name="colorBlue">#33ccff</color>
+    <color name="colorYellow">#ffcc00</color>
     <color name="colorWhite">#ffffff</color>
     <color name="colorBackground">#f0f0f0</color>
 </resources>
