--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:orientation="vertical"
@@ -31,6 +32,20 @@
             style="@style/Button"
             android:layout_marginTop="4dp"
             android:text="@string/recycle_activity" />
+
+        <com.cloud.customviews.ProgressButton
+            android:id="@+id/button_progress"
+            android:layout_width="240dp"
+            android:layout_height="48dp"
+            android:layout_marginTop="4dp"
+            android:textAllCaps="false"
+            android:textColor="@color/colorWhite"
+            android:text="@string/button_progress"
+            app:cornerRadius="8dp"
+            app:progressMargin="2dp"
+            app:progressColor="@color/colorGreen"
+            app:progressBackColor="@color/colorYellow"
+            app:normalColor="@color/colorGreen" />
 
     </LinearLayout>
 
