--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,6 +15,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:background">@drawable/bg_button</item>
+        <item name="android:elevation">2dp</item>
     </style>
 
 </resources>
