--- a/customviews/src/main/res/values/attrs.xml
+++ b/customviews/src/main/res/values/attrs.xml
@@ -3,7 +3,7 @@
     <declare-styleable name="ProgressButton">
         <attr name="progressColor" format="color" />
         <attr name="progressBackColor" format="color" />
-        <attr name="normalColor" format="color" />
+        <attr name="buttonColor" format="color" />
         <attr name="cornerRadius" format="dimension" />
         <attr name="progress" format="integer" />
         <attr name="maxProgress" format="integer" />
