--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,48 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-        tools:context=".activity.MainActivity">
+        android:orientation="vertical">
 
-        <Button
-            android:id="@+id/button_toast"
-            style="@style/Button"
-            android:text="@string/show_colored_toast" />
+        <android.support.v7.widget.Toolbar
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            app:title="@string/app_name"
+            app:titleTextColor="@color/colorWhite"
+            android:background="@color/colorPrimary">
 
-        <Button
-            android:id="@+id/button_info_dialog"
-            style="@style/Button"
-            android:layout_marginTop="4dp"
-            android:text="@string/show_dialog_info" />
+        </android.support.v7.widget.Toolbar>
 
-        <Button
-            android:id="@+id/button_warning_dialog"
-            style="@style/Button"
-            android:layout_marginTop="4dp"
-            android:text="@string/show_dialog_warning" />
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            tools:context=".activity.MainActivity">
 
-        <Button
-            android:id="@+id/button_show_recycle_view"
-            style="@style/Button"
-            android:layout_marginTop="4dp"
-            android:text="@string/recycle_activity" />
+            <Button
+                android:id="@+id/button_toast"
+                style="@style/Button"
+                android:text="@string/show_colored_toast" />
 
-        <Button
-            android:id="@+id/button_progress"
-            style="@style/Button"
-            android:layout_marginTop="4dp"
-            android:text="@string/button_progress" />
+            <Button
+                android:id="@+id/button_info_dialog"
+                style="@style/Button"
+                android:layout_marginTop="4dp"
+                android:text="@string/show_dialog_info" />
 
-        <Button
-            android:id="@+id/button_circle_progress"
-            style="@style/Button"
-            android:layout_marginTop="4dp"
-            android:text="@string/circle_progress_bar" />
+            <Button
+                android:id="@+id/button_warning_dialog"
+                style="@style/Button"
+                android:layout_marginTop="4dp"
+                android:text="@string/show_dialog_warning" />
+
+            <Button
+                android:id="@+id/button_show_recycle_view"
+                style="@style/Button"
+                android:layout_marginTop="4dp"
+                android:text="@string/recycle_activity" />
+
+            <Button
+                android:id="@+id/button_progress"
+                style="@style/Button"
+                android:layout_marginTop="4dp"
+                android:text="@string/button_progress" />
+
+            <Button
+                android:id="@+id/button_circle_progress"
+                style="@style/Button"
+                android:layout_marginTop="4dp"
+                android:text="@string/circle_progress_bar" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
