--- a/app/src/main/res/layout/activity_progress_bar.xml
+++ b/app/src/main/res/layout/activity_progress_bar.xml
@@ -7,43 +7,82 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:gravity="center"
         tools:context=".activity.ProgressBarActivity">
 
-        <com.cloud.customviews.CircleProgressBar
-            android:id="@+id/progress_green"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:gravity="center"
-            android:textColor="@color/colorGreen"
-            android:textSize="20sp"
-            android:text="@string/circle_progress_bar"
-            app:progressBackColor="@color/colorGray"
-            app:progressColor="@color/colorGreen"
-            app:progressWidth="8dp"
-            tools:progress="20" />
+        <android.support.v7.widget.Toolbar
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            app:title="@string/circle_progress_bar"
+            app:titleTextColor="@color/colorWhite"
+            android:background="@color/colorPrimary">
 
-        <com.cloud.customviews.CircleProgressBar
-            android:id="@+id/progress_yellow"
-            android:layout_width="180dp"
-            android:layout_height="180dp"
-            android:layout_marginTop="16dp"
-            android:gravity="center"
-            android:textColor="@color/colorYellow"
-            android:textStyle="bold"
-            android:textSize="22sp"
-            android:text="@string/circle_progress_bar"
-            app:progressBackColor="@color/colorGray"
-            app:progressColor="@color/colorYellow"
-            app:progressWidth="16dp"
-            tools:progress="30" />
+        </android.support.v7.widget.Toolbar>
 
-        <Button
-            android:id="@+id/button_start_progress"
-            style="@style/Button"
-            android:layout_width="150dp"
-            android:layout_marginTop="16dp"
-            android:text="@string/start_progress" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center">
+
+            <android.support.constraint.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="16dp">
+
+                <com.cloud.customviews.CircleProgressBar
+                    android:id="@+id/progress_green"
+                    android:layout_width="180dp"
+                    android:layout_height="180dp"
+                    android:gravity="center"
+                    android:textColor="@color/colorGreen"
+                    android:textSize="22sp"
+                    android:text="@string/circle_progress_bar"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:progressBackColor="@color/colorGray"
+                    app:progressColor="@color/colorGreen"
+                    app:progressWidth="8dp"
+                    tools:progress="20" />
+
+                <com.cloud.customviews.CircleProgressBar
+                    android:id="@+id/progress_yellow"
+                    android:layout_width="180dp"
+                    android:layout_height="180dp"
+                    android:gravity="center"
+                    android:textColor="@color/colorYellow"
+                    android:textStyle="bold"
+                    android:textSize="22sp"
+                    android:text="@string/circle_progress_bar"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:progressBackColor="@color/colorGray"
+                    app:progressColor="@color/colorYellow"
+                    app:progressWidth="20dp"
+                    tools:progress="30" />
+
+                <com.cloud.customviews.CircleProgressBar
+                    android:id="@+id/fan_progress"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
+                    android:layout_marginTop="16dp"
+                    app:layout_constraintTop_toBottomOf="@id/progress_yellow"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:progressWidth="75dp"
+                    tools:progress="30" />
+
+                <Button
+                    android:id="@+id/button_start_progress"
+                    style="@style/Button"
+                    android:layout_width="150dp"
+                    android:layout_marginTop="16dp"
+                    android:text="@string/start_progress"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/fan_progress" />
+
+            </android.support.constraint.ConstraintLayout>
+
+        </LinearLayout>
 
     </LinearLayout>
 
