--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,11 +11,17 @@
     <style name="Button" parent="Base.TextAppearance.AppCompat.Widget.Button.Colored">
         <item name="android:paddingStart">16dp</item>
         <item name="android:paddingEnd">16dp</item>
-        <item name="android:layout_width">240dp</item>
-        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">start|center_vertical</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">55dp</item>
         <item name="android:textAllCaps">false</item>
-        <item name="android:background">@drawable/bg_button</item>
-        <item name="android:elevation">2dp</item>
+        <item name="android:background">@drawable/bg_item</item>
+        <item name="android:elevation">0dp</item>
+    </style>
+
+    <style name="LightStatusBar" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:statusBarColor">#ffffff</item>
+        <item name="android:windowLightStatusBar">true</item>
     </style>
 
 </resources>
