--- a/app/src/main/res/layout/activity_progress_bar.xml
+++ b/app/src/main/res/layout/activity_progress_bar.xml
@@ -12,9 +12,11 @@
         <android.support.v7.widget.Toolbar
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
+            android:background="@color/colorPrimary"
+            android:elevation="4dp"
+            app:navigationIcon="@drawable/ic_circle_bar"
             app:title="@string/circle_progress_bar"
-            app:titleTextColor="@color/colorWhite"
-            android:background="@color/colorPrimary">
+            app:titleTextColor="@color/colorWhite">
 
         </android.support.v7.widget.Toolbar>
 
@@ -30,14 +32,15 @@
 
                 <com.cloud.customviews.CircleProgressBar
                     android:id="@+id/progress_green"
-                    android:layout_width="180dp"
-                    android:layout_height="180dp"
+                    android:layout_width="145dp"
+                    android:layout_height="145dp"
                     android:gravity="center"
                     android:textColor="@color/colorGreen"
-                    android:textSize="22sp"
+                    android:textSize="18sp"
                     android:text="@string/circle_progress_bar"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:progressBackColor="@color/colorGray"
                     app:progressColor="@color/colorGreen"
                     app:progressWidth="8dp"
@@ -45,24 +48,26 @@
 
                 <com.cloud.customviews.CircleProgressBar
                     android:id="@+id/progress_yellow"
-                    android:layout_width="180dp"
-                    android:layout_height="180dp"
+                    android:layout_width="145dp"
+                    android:layout_height="145dp"
+                    android:layout_marginTop="16dp"
                     android:gravity="center"
                     android:textColor="@color/colorYellow"
                     android:textStyle="bold"
-                    android:textSize="22sp"
+                    android:textSize="18sp"
                     android:text="@string/circle_progress_bar"
-                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/progress_green"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:progressBackColor="@color/colorGray"
                     app:progressColor="@color/colorYellow"
-                    app:progressWidth="20dp"
+                    app:progressWidth="16dp"
                     tools:progress="30" />
 
                 <com.cloud.customviews.CircleProgressBar
                     android:id="@+id/fan_progress"
-                    android:layout_width="150dp"
-                    android:layout_height="150dp"
+                    android:layout_width="145dp"
+                    android:layout_height="145dp"
                     android:layout_marginTop="16dp"
                     app:layout_constraintTop_toBottomOf="@id/progress_yellow"
                     app:layout_constraintStart_toStartOf="parent"
@@ -72,13 +77,12 @@
 
                 <Button
                     android:id="@+id/button_start_progress"
-                    style="@style/Widget.AppCompat.Button.Colored"
-                    android:layout_width="150dp"
-                    android:layout_height="wrap_content"
+                    style="@style/Button"
+                    android:layout_width="180dp"
+                    android:layout_height="48dp"
                     android:layout_marginTop="16dp"
-                    android:layout_marginBottom="8dp"
-                    android:background="@drawable/bg_button"
                     android:text="@string/start_progress"
+                    android:background="@drawable/bg_button"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/fan_progress"
