--- a/app/src/main/res/layout/activity_progress_button.xml
+++ b/app/src/main/res/layout/activity_progress_button.xml
@@ -11,9 +11,10 @@
         <android.support.v7.widget.Toolbar
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
+            android:background="@color/colorPrimary"
+            android:elevation="4dp"
             app:title="@string/button_progress"
-            app:titleTextColor="@color/colorWhite"
-            android:background="@color/colorPrimary">
+            app:titleTextColor="@color/colorWhite">
 
         </android.support.v7.widget.Toolbar>
 
